<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice_project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="player_1_name">player 1</string>
    <string name="player_2_name">player 2</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="welcome">Welcome to Tic-Tac-Toe</string>
    <string name="instruction">Please type in the user name</string>
    <string name="empty_line">  </string>
    <string name="title_activity_display_message">My Message</string>

    <color name="white">#FFFFFFFF</color>
    <color name="black">#FF000000</color>
    <color name="red">#FFFF0000</color>

    <string name="title_activity_game_view">GameView</string>

</resources>
